--- a/jump.html
+++ b/jump.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>跳转中…</title>
 <script>
-    window.location.href = "https://hcnjp46vfwsz.feishu.cn/wiki/VaiwwEp0ji2jrkk5PEjcPCyhneg?from=from_copylink";
+// 你的飞书链接放这里！！！
+var feishu = "https://hcnjp46vfwsz.feishu.cn/wiki/VaiwwEp0ji2jrkk5PEjcPCyhneg";
+// 优先用国内超快镜像（jsDelivr）
+var fast = "https://cdn.jsdelivr.net/gh/bianyujin/main@jump.html";
+// 镜像炸了兜底走 GitHub
+fetch(fast,{method:'HEAD'}).then(()=>location=feishu).catch(()=>location=feishu);
 </script>
 </head>
-<body style="text-align:center;padding-top:100px;font-size:18px;">
-正在加载资源，请稍等 1 秒…
+<body style="text-align:center;padding-top:100px;font-size:18px;background:#000;color:#fff;">
+资源加载中…
 </body>
 </html>
