--- a/jump.html
+++ b/jump.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<script>location.href="https://hcnjp46vfwsz.feishu.cn/wiki/VaiwwEp0ji2jrkk5PEjcPCyhneg?from=from_copylink"</script>
-</head>
-</html>
+ <meta charset="utf-8">
+    <script>
+        window.location.href = "https://hcnjp46vfwsz.feishu.cn/wiki/VaiwwEp0ji2jrkk5PEjcPCyhneg?table=tbl1Y5TaMa5d5xi7&view=vewAzV3Mf9";
+    </script>
