--- a/jump.html
+++ b/jump.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>跳转中...</title>
-<script>
-var feishu = "https://hcnjp46vfwsz.feishu.cn/wiki/VaiwwEp0ji2jrkk5PEjcPCyhneg?from=from_copylink"; // ← 你的飞书链接放这里！
-// 直接用国内CDN镜像（0.3秒必成）
-location.href = "https://cdn.jsdelivr.net/gh/bianyujin/main@jump.html" || feishu;
-</script>
+    <meta charset="utf-8">
+    <script>
+        window.location.href = "https://hcnjp46vfwsz.feishu.cn/wiki/VaiwwEp0ji2jrkk5PEjcPCyhneg?from=from_copylink";
+    </script>
 </head>
-<body style="text-align:center;padding:100px;font-size:18px;background:#000;color:#fff;">
-资源加载中...
-</body>
+<body>正在跳转...</body>
 </html>
